finition du css du form page d'accueil

--- a/index.html
+++ b/index.html
@@ -21,19 +21,20 @@
     </header>
 
     <nav>
-        <form action="" method="get">
-            <i class="fas fa-map-marker-alt center-icon-map"></i>
-            <input type="text" id="localisation">
+        <form method="get">
+            <div class="map-input-localisation">
+                <i class="fas fa-map-marker-alt center-icon-map"></i>
+                <input type="text" id="localisation">
+            </div> 
+            <div class="explication-reservation-menu">
+                <h2>Réservez le menu qui vous convient</h2>
+                <h3>Découvrez des restaurants d'exception, sélectionnés par nos soins</h3>
+                <button type="submit" id="localisation" class="button-explorer-restaurant">Explorer nos restaurants</button>
+            </div>     
         </form>
     </nav>
 
     <main>
-        <div class="explication-reservation-menu">
-            <h2>Réservez le menu qui vous convient</h2>
-            <h3>Découvrez des restaurants d'exception, sélectionnés par nos soins</h3>
-            <button class="button-explorer-restaurant">Explorer nos restaurants</button>
-        </div>
-
         <div>
             <h1>Fonctionnement</h1>
             <div>
