--- a/index.html
+++ b/index.html
@@ -36,19 +36,19 @@
 
     <main>
         <div>
-            <h1>Fonctionnement</h1>
-            <div>
-                <p>1</p>
+            <h2>Fonctionnement</h2>
+            <div class="menu-1">
+                <p class="rounded-number">1</p>
                 <i class="fas fa-mobile-alt"></i>
                 <p>Choisissez un restaurant</p>
             </div>
-            <div>
-                <p>2</p>
+            <div class="menu-2">
+                <p class="rounded-number">2</p>
                 <i class="fas fa-list-ul"></i>
                 <p>Composez votre menu</p>
             </div>
-            <div>
-                <p>3</p>
+            <div class="menu-3">
+                <p class="rounded-number">3</p>
                 <i class="fas fa-store"></i>
                 <p>Dégustez au restaurant</p>
             </div>
