--- a/index.html
+++ b/index.html
@@ -58,47 +58,62 @@
     <article id="restaurants">
         <h2>Restaurants</h2>
         <div class="cards-restaurant">
-            <img src="restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="#">
-            <p>La palette du goût</p>
-            <p>Ménilmontant</p>
-            <i class="far fa-heart"></i>
+            <img src="images/logo/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="#">
+            <div class="text-cards-restaurant">
+                <div>
+                    <p class="bold-p">La palette du goût</p>
+                    <p class="margin-text-card">Ménilmontant</p>
+                </div>
+                <div>
+                    <p class="p-nouveau">Nouveau</p>
+                    <p class="icon-card-heart"><i class="far fa-heart"></i></p>
+                </div>
+            </div>
         </div>
         <div class="cards-restaurant">
-            <img src="" alt="#">
-            <p>La note enchantée</p>
-            <p>Charonne</p>
-            <i class="far fa-heart"></i>
+            <img src="images/logo/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="#">
+            <div class="text-cards-restaurant">
+                <div>
+                    <p class="bold-p">La note enchantée</p>
+                    <p class="margin-text-card">Charonne</p>
+                </div>
+                <div>
+                    <p class="p-nouveau">Nouveau</p>
+                    <p class="icon-card-heart"><i class="far fa-heart"></i></p>
+                </div>
+            </div> 
         </div>
         <div class="cards-restaurant">
-            <img src="" alt="#">
-            <p>A la française</p>
-            <p>Cité Rouge</p>
-            <i class="far fa-heart"></i>
+            <img src="images/logo/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="#">
+            <div class="text-cards-restaurant">
+                <div>
+                    <p class="bold-p">A la française</p>
+                    <p class="margin-text-card">Cité Rouge</p>
+                </div>
+                <div>
+                    <p class="icon-card-heart"><i class="far fa-heart"></i></p>
+                </div>
+            </div>
         </div>
-        <div>
-            <img src="" alt="">
-            <p>Le délice des sens</p>
-            <p>Folie-Méricourt</p>
-            <i class="far fa-heart"></i>
+        <div class="cards-restaurant">
+            <img src="images/logo/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="">
+            <div class="text-cards-restaurant">
+                <div>
+                    <p class="bold-p">Le délice des sens</p>
+                    <p class="margin-text-card">Folie-Méricourt</p>
+                </div>
+                <div>
+                    <p class="icon-card-heart"><i class="far fa-heart"></i></p>
+                </div>
+            </div>
         </div>
     </article>
     <footer>
-        <p>ohmyfood</p>
-        <div>
-            <i class="fas fa-utensils"></i>
-            <p>Proposer un restaurant</p>
-        </div>
-        <div>
-            <i class="fas fa-hands-helping"></i>
-            <p>Devenir partenaire</p>
-        </div>
-        <div>
-            <p>Mentions légales</p>
-        </div>
-        <div>
-            <p>Contact</p>
-        </div>
-    </footer>
-        
+        <p class="font-ohmyfood">ohmyfood</p>
+        <p class="p-footer"><i class="fas fa-utensils icon-footer"></i> Proposer un restaurant</p>
+        <p class="p-footer"><i class="fas fa-hands-helping icon-footer"></i> Devenir partenaire</p>
+        <p class="p-footer">Mentions légales</p>
+        <p class="p-footer" id="contact">Contact</p>
+    </footer> 
 </body>
 </html>
