--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div class="explication-reservation-menu">
                 <h2>Réservez le menu qui vous convient</h2>
                 <h3>Découvrez des restaurants d'exception, sélectionnés par nos soins</h3>
-                <button type="submit" form="form-my-food" class="button-explorer-restaurant">Explorer nos restaurants</button>
+                <button type="submit" form="form-my-food" class="button-primary">Explorer nos restaurants</button>
             </div>     
         </form>
     </nav>
@@ -113,7 +113,7 @@
         <p class="p-footer"><i class="fas fa-utensils icon-footer"></i> Proposer un restaurant</p>
         <p class="p-footer"><i class="fas fa-hands-helping icon-footer"></i> Devenir partenaire</p>
         <p class="p-footer">Mentions légales</p>
-        <p class="p-footer" id="contact">Contact</p>
+        <p class="p-footer" class="contact">Contact</p>
     </footer> 
 </body>
 </html>
