--- a/menu-francaise.html
+++ b/menu-francaise.html
@@ -14,38 +14,39 @@
         </main>
 
         <section id="entrees">
-            <div class="card-generale">
-                <div>
-                    <h2 class="font-h2-francaise">A la française</h2>
+            <div class="card-generale-main">
+                <div class="h1-main-heart">
+                    <h1 class="font-h2-francaise">À la française</h1>
                     <p><i class="far fa-heart"></i></p>
                 </div>
-
-                <h2>ENTREES</h2>
+            </div>
+            
+            <div class="card-generale-entrees-francaise">
+                <h3>ENTRÉES</h3>
                 <div class="cards-entree-francaise">
                     <h3>Tartare de poulpe acidulé</h3>
-                    <div>
+                    <div class="flex-plat-prix">
                         <p>Aux zests d'orange</p>
-                        <p>25€</p>
+                        <p class="p-prix">25€</p>
                     </div>
                 </div>
 
                 <div class="cards-entree-francaise">
                     <h3>Velouté de légumes d'antan</h3>
-                    <div>
+                    <div class="flex-plat-prix">
                         <p>Carotte, panais, topinambour</p>
-                        <p>35€</p>
+                        <p class="p-prix">35€</p>
                     </div>
                 </div>
 
                 <div class="cards-entree-francaise">
                     <h3>Soupe à l'oignon</h3>
-                    <div>
+                    <div class="flex-plat-prix">
                         <p>Revisitée</p>
-                        <p>20€</p>
+                        <p class="p-prix">20€</p>
                     </div>
                 </div>
             </div>
-            
         </section>
 
         <section id="plats">
