mise en page du menu à la française

--- a/menu-francaise.html
+++ b/menu-francaise.html
@@ -13,17 +13,16 @@
             </div>
         </main>
 
-        <section id="entrees">
-            <div class="card-generale-main">
-                <div class="h1-main-heart">
-                    <h1 class="font-h2-francaise">À la française</h1>
-                    <p><i class="far fa-heart"></i></p>
-                </div>
+        <div class="card-generale-main">
+            <div class="h1-main-heart">
+                <h1 class="font-h2-francaise">À la française</h1>
+                <p><i class="far fa-heart"></i></p>
             </div>
+        </div>
             
-            <div class="card-generale-entrees-francaise">
+        <div class="card-generale-entree-francaise">
                 <h3>ENTRÉES</h3>
-                <div class="cards-entree-francaise">
+                <div class="cards-menu-francaise">
                     <h3>Tartare de poulpe acidulé</h3>
                     <div class="flex-plat-prix">
                         <p>Aux zests d'orange</p>
@@ -31,7 +30,7 @@
                     </div>
                 </div>
 
-                <div class="cards-entree-francaise">
+                <div class="cards-menu-francaise">
                     <h3>Velouté de légumes d'antan</h3>
                     <div class="flex-plat-prix">
                         <p>Carotte, panais, topinambour</p>
@@ -39,69 +38,64 @@
                     </div>
                 </div>
 
-                <div class="cards-entree-francaise">
+                <div class="cards-menu-francaise" id="no-margin-bottom">
                     <h3>Soupe à l'oignon</h3>
                     <div class="flex-plat-prix">
                         <p>Revisitée</p>
                         <p class="p-prix">20€</p>
                     </div>
                 </div>
-            </div>
-        </section>
 
-        <section id="plats">
-            <h2>PLATS</h2>
-            <div class="cards-plat-francaise">
+            <h3>PLATS</h3>
+            <div class="cards-menu-francaise">
                 <h3>Coquilles Saint-Jacques</h3>
-                <div>
-                    <p>Acompagnées d'une purée de panais</p>
-                    <p>40€</p>
+                <div class="flex-plat-prix">
+                    <p>Accompagnées d'une purée de panais</p>
+                    <p class="p-prix">40€</p>
                 </div>
             </div>
 
-            <div class="cards-plat-francaise">
+            <div class="cards-menu-francaise">
                 <h3>Magret de canard</h3>
-                <div>
+                <div class="flex-plat-prix">
                     <p>Et parmentier de pommes de terres</p>
-                    <p>35€</p>
+                    <p class="p-prix">35€</p>
                 </div>
             </div>
 
-            <div class="cards-plat-francaise">
+            <div class="cards-menu-francaise">
                 <h3>Pigeonneau d'Ille-et-Vilaine</h3>
-                <div>
+                <div class="flex-plat-prix">
                     <p>Sur son lit de gnocchis aux légumes</p>
-                    <p>44€</p>
+                    <p class="p-prix">44€</p>
                 </div>
             </div>
-        </section>
 
-        <section id="desserts">
             <h2>DESSERTS</h2>
-            <div class="cards-plat-francaise">
+            <div class="cards-menu-francaise">
                 <h3>Pétales de violettes glacés</h3>
-                <div>
+                <div class="flex-plat-prix">
                     <p>Et purée de noisettes</p>
-                    <p>18€</p>
+                    <p class="p-prix">18€</p>
                 </div>
             </div>
 
-            <div class="cards-plat-francaise">
+            <div class="cards-menu-francaise">
                 <h3>Fondant au chocolat</h3>
-                <div>
+                <div class="flex-plat-prix">
                     <p>Revisité</p>
-                    <p>22€</p>
+                    <p class="p-prix">22€</p>
                 </div>
             </div>
 
-            <div class="cards-plat-francaise">
+            <div class="cards-menu-francaise">
                 <h3>Millefeuille croustillant</h3>
-                <div>
+                <div class="flex-plat-prix">
                     <p>Myrtilles et pâte d'amande</p>
-                    <p>23€</p>
+                    <p class="p-prix">23€</p>
                 </div>
-            </div>
-        </section>
+            </div> 
+        </div>
 
         <button type="submit" class="button-primary">Commander</button>
 
