--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <!-- fontawesome -->
+    <script src="https://kit.fontawesome.com/1a41b34319.js" crossorigin="anonymous"></script>
     <title>ohmyfood</title>
 </head>
+
 <body>
     <header>
         <svg width="196" height="34" viewBox="0 0 196 34" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -37,17 +40,17 @@
     <main>
         <div>
             <h2 class="margin-fonctionnement">Fonctionnement</h2>
-            <div class="menu-1">
+            <div class="fonctionnement-1">
                 <p class="rounded-number">1</p>
                 <p class="position-icon-fontawesome"><i class="fas fa-mobile-alt"></i></p>
                 <p>Choisissez un restaurant</p>
             </div>
-            <div class="menu-2">
+            <div class="fonctionnement-2">
                 <p class="rounded-number">2</p>
                 <p class="position-icon-fontawesome"><i class="fas fa-list-ul"></i></p>
                 <p>Composez votre menu</p>
             </div>
-            <div class="menu-3">
+            <div class="fonctionnement-3">
                 <p class="rounded-number">3</p>
                 <p class="position-icon-fontawesome"><i class="fas fa-store"></i></p>
                 <p>Dégustez au restaurant</p>
@@ -83,18 +86,22 @@
                 </div>
             </div> 
         </div>
-        <div class="cards-restaurant">
-            <img src="images/logo/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="#">
-            <div class="text-cards-restaurant">
-                <div>
-                    <p class="bold-p">A la française</p>
-                    <p class="margin-text-card">Cité Rouge</p>
-                </div>
-                <div>
-                    <p class="icon-card-heart"><i class="far fa-heart"></i></p>
+
+        <a href="menu-francaise.html">
+            <div class="cards-restaurant">
+                <img src="images/logo/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="#">
+                <div class="text-cards-restaurant">
+                    <div>
+                        <p class="bold-p">À la française</p>
+                        <p class="margin-text-card">Cité Rouge</p>
+                    </div>
+                    <div>
+                        <p class="icon-card-heart"><i class="far fa-heart"></i></p>
+                    </div>
                 </div>
             </div>
-        </div>
+        </a>
+
         <div class="cards-restaurant">
             <img src="images/logo/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="">
             <div class="text-cards-restaurant">
