--- a/index.html
+++ b/index.html
@@ -60,32 +60,38 @@
 
     <article id="restaurants">
         <h2>Restaurants</h2>
-        <div class="cards-restaurant">
-            <img src="images/logo/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="#">
-            <div class="text-cards-restaurant">
-                <div>
-                    <p class="bold-p">La palette du goût</p>
-                    <p class="margin-text-card">Ménilmontant</p>
-                </div>
-                <div>
-                    <p class="p-nouveau">Nouveau</p>
-                    <p class="icon-card-heart"><i class="far fa-heart"></i></p>
+
+        <a href="menu-palette.html">
+            <div class="cards-restaurant">
+                <img src="images/logo/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="#">
+                <div class="text-cards-restaurant">
+                    <div>
+                        <p class="bold-p">La palette du goût</p>
+                        <p class="margin-text-card">Ménilmontant</p>
+                    </div>
+                    <div>
+                        <p class="p-nouveau">Nouveau</p>
+                        <p class="icon-card-heart"><i class="far fa-heart"></i></p>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="cards-restaurant">
-            <img src="images/logo/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="#">
-            <div class="text-cards-restaurant">
-                <div>
-                    <p class="bold-p">La note enchantée</p>
-                    <p class="margin-text-card">Charonne</p>
-                </div>
-                <div>
-                    <p class="p-nouveau">Nouveau</p>
-                    <p class="icon-card-heart"><i class="far fa-heart"></i></p>
-                </div>
-            </div> 
-        </div>
+        </a>
+
+        <a href="menu-enchantee.html">
+            <div class="cards-restaurant">
+                <img src="images/logo/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="#">
+                <div class="text-cards-restaurant">
+                    <div>
+                        <p class="bold-p">La note enchantée</p>
+                        <p class="margin-text-card">Charonne</p>
+                    </div>
+                    <div>
+                        <p class="p-nouveau">Nouveau</p>
+                        <p class="icon-card-heart"><i class="far fa-heart"></i></p>
+                    </div>
+                </div> 
+            </div>
+        </a>
 
         <a href="menu-francaise.html">
             <div class="cards-restaurant">
@@ -102,18 +108,20 @@
             </div>
         </a>
 
-        <div class="cards-restaurant">
-            <img src="images/logo/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="">
-            <div class="text-cards-restaurant">
-                <div>
-                    <p class="bold-p">Le délice des sens</p>
-                    <p class="margin-text-card">Folie-Méricourt</p>
-                </div>
-                <div>
-                    <p class="icon-card-heart"><i class="far fa-heart"></i></p>
+        <a href="menu-delice.html">
+            <div class="cards-restaurant">
+                <img src="images/logo/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="">
+                <div class="text-cards-restaurant">
+                    <div>
+                        <p class="bold-p">Le délice des sens</p>
+                        <p class="margin-text-card">Folie-Méricourt</p>
+                    </div>
+                    <div>
+                        <p class="icon-card-heart"><i class="far fa-heart"></i></p>
+                    </div>
                 </div>
             </div>
-        </div>
+        </a>
     </article>
     <footer>
         <p class="font-ohmyfood">ohmyfood</p>
