--- a/menu-delice.html
+++ b/menu-delice.html
@@ -24,13 +24,13 @@
         </header>
         <main>
             <div>
-               <img src="images/logo/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="#" class="img-francaise"> 
+               <img src="images/logo/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="#" class="img-francaise"> 
             </div>
         </main>
 
         <div class="card-generale-main">
             <div class="h1-main-heart">
-                <h1 class="font-h2-francaise">À la française</h1>
+                <h1 class="font-h2-francaise">Le délice des sens</h1>
                 <p><i class="far fa-heart"></i></p>
             </div>
         </div>
@@ -38,79 +38,80 @@
         <div class="card-primary">
                 <h3 class="border-title-menu">ENTRÉES</h3>
                 <div class="cards-menu">
-                    <h3>Tartare de poulpe acidulé</h3>
+                    <h3>Tartare de thon</h3>
                     <div class="flex-plat-prix">
-                        <p>Aux zests d'orange</p>
+                        <p>Assaisonné au yuzu</p>
                         <p class="p-prix">25€</p>
                     </div>
                 </div>
 
                 <div class="cards-menu">
-                    <h3>Velouté de légumes d'antan</h3>
+                    <h3>Bouchée de homard croustillant</h3>
                     <div class="flex-plat-prix">
-                        <p>Carotte, panais, topinambour</p>
+                        <p>Et sa farandole de petits légumes</p>
                         <p class="p-prix">35€</p>
                     </div>
                 </div>
 
                 <div class="cards-menu" >
-                    <h3>Soupe à l'oignon</h3>
+                    <h3>Velouté de cèpes</h3>
                     <div class="flex-plat-prix">
-                        <p>Revisitée</p>
+                        <p>Aux truffes</p>
                         <p class="p-prix">20€</p>
                     </div>
                 </div>
 
             <h3 class="border-title-menu">PLATS</h3>
             <div class="cards-menu">
-                <h3>Coquilles Saint-Jacques</h3>
+                <h3>Poulet rôti aux herbes de Provence</h3>
                 <div class="flex-plat-prix">
-                    <p>Accompagnées d'une purée de panais</p>
+                    <p>Et sa crème de truffe</p>
                     <p class="p-prix">40€</p>
                 </div>
             </div>
 
             <div class="cards-menu">
-                <h3>Magret de canard</h3>
+                <h3>Langouste rôtie</h3>
                 <div class="flex-plat-prix">
-                    <p>Et parmentier de pommes de terres</p>
+                    <p>Et ses légumes de saison</p>
                     <p class="p-prix">35€</p>
                 </div>
             </div>
 
             <div class="cards-menu">
-                <h3>Pigeonneau d'Ille-et-Vilaine</h3>
+                <h3>Côte de boeuf Angus</h3>
                 <div class="flex-plat-prix">
-                    <p>Sur son lit de gnocchis aux légumes</p>
+                    <p>Et sa purée de panais</p>
                     <p class="p-prix">44€</p>
                 </div>
             </div>
 
             <h3 class="border-title-menu">DESSERTS</h3>
             <div class="cards-menu">
-                <h3>Pétales de violettes glacés</h3>
+                <h3>Farandole de desserts</h3>
                 <div class="flex-plat-prix">
-                    <p>Et purée de noisettes</p>
+                    <p>Du chef</p>
                     <p class="p-prix">18€</p>
                 </div>
             </div>
 
             <div class="cards-menu">
-                <h3>Fondant au chocolat</h3>
+                <h3>Crème brulée</h3>
                 <div class="flex-plat-prix">
-                    <p>Revisité</p>
+                    <p>Revisitée</p>
                     <p class="p-prix">22€</p>
                 </div>
             </div>
 
             <div class="cards-menu">
-                <h3>Millefeuille croustillant</h3>
+                <h3>Tiramisu</h3>
                 <div class="flex-plat-prix">
-                    <p>Myrtilles et pâte d'amande</p>
+                    <p>À la noisette</p>
                     <p class="p-prix">23€</p>
                 </div>
             </div>
         </div>
+
         <div class="display-flex-commander">
             <button type="submit" class="button-primary button-commander">Commander</button>
         </div>
