--- a/menu-enchantee.html
+++ b/menu-enchantee.html
@@ -24,13 +24,13 @@
         </header>
         <main>
             <div>
-               <img src="images/logo/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="#" class="img-francaise"> 
+               <img src="images/logo/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="#" class="img-francaise"> 
             </div>
         </main>
 
         <div class="card-generale-main">
             <div class="h1-main-heart">
-                <h1 class="font-h2-francaise">À la française</h1>
+                <h1 class="font-h2-francaise">La note enchantée</h1>
                 <p><i class="far fa-heart"></i></p>
             </div>
         </div>
@@ -38,79 +38,88 @@
         <div class="card-primary">
                 <h3 class="border-title-menu">ENTRÉES</h3>
                 <div class="cards-menu">
-                    <h3>Tartare de poulpe acidulé</h3>
+                    <h3>Ravioles de foie gras</h3>
                     <div class="flex-plat-prix">
-                        <p>Aux zests d'orange</p>
+                        <p>Accompagnés de leur crème à la truffe</p>
                         <p class="p-prix">25€</p>
                     </div>
                 </div>
 
                 <div class="cards-menu">
-                    <h3>Velouté de légumes d'antan</h3>
+                    <h3>Caviar osciètre</h3>
                     <div class="flex-plat-prix">
-                        <p>Carotte, panais, topinambour</p>
+                        <p>Sur blini à la farine de blé noir</p>
                         <p class="p-prix">35€</p>
                     </div>
                 </div>
 
                 <div class="cards-menu" >
-                    <h3>Soupe à l'oignon</h3>
+                    <h3>Homard et espuma de potiron</h3>
                     <div class="flex-plat-prix">
-                        <p>Revisitée</p>
+                        <p>Mariné aux zestes d'orange</p>
                         <p class="p-prix">20€</p>
+                    </div>
+                </div>
+
+                <div class="cards-menu" >
+                    <h3>Foie gras de canard cuit entier</h3>
+                    <div class="flex-plat-prix">
+                        <p>Confiture de figue et pain toasté</p>
+                        <p class="p-prix">35€</p>
                     </div>
                 </div>
 
             <h3 class="border-title-menu">PLATS</h3>
             <div class="cards-menu">
-                <h3>Coquilles Saint-Jacques</h3>
+                <h3>Noix de coquilles Saint-Jacques</h3>
                 <div class="flex-plat-prix">
-                    <p>Accompagnées d'une purée de panais</p>
+                    <p>Sur lit de purée de céleri-rave</p>
                     <p class="p-prix">40€</p>
                 </div>
             </div>
 
             <div class="cards-menu">
-                <h3>Magret de canard</h3>
+                <h3>Langoustine poêlée</h3>
                 <div class="flex-plat-prix">
-                    <p>Et parmentier de pommes de terres</p>
+                    <p>Purée de patate douce</p>
                     <p class="p-prix">35€</p>
                 </div>
             </div>
 
             <div class="cards-menu">
-                <h3>Pigeonneau d'Ille-et-Vilaine</h3>
+                <h3>Mijoté de queue de boeuf</h3>
                 <div class="flex-plat-prix">
-                    <p>Sur son lit de gnocchis aux légumes</p>
+                    <p>Et riz sauvage aux zestes de citron</p>
                     <p class="p-prix">44€</p>
                 </div>
             </div>
 
             <h3 class="border-title-menu">DESSERTS</h3>
             <div class="cards-menu">
-                <h3>Pétales de violettes glacés</h3>
+                <h3>Macaron noisette et chocolat</h3>
                 <div class="flex-plat-prix">
-                    <p>Et purée de noisettes</p>
+                    <p>Glace au caramel brun et sel de Guérande</p>
                     <p class="p-prix">18€</p>
                 </div>
             </div>
 
             <div class="cards-menu">
-                <h3>Fondant au chocolat</h3>
+                <h3>Baba au rhum revisité</h3>
                 <div class="flex-plat-prix">
-                    <p>Revisité</p>
+                    <p>Avec son coulis de citron</p>
                     <p class="p-prix">22€</p>
                 </div>
             </div>
 
             <div class="cards-menu">
-                <h3>Millefeuille croustillant</h3>
+                <h3>Tarte au citron meringuée</h3>
                 <div class="flex-plat-prix">
-                    <p>Myrtilles et pâte d'amande</p>
+                    <p>Déstructurée</p>
                     <p class="p-prix">23€</p>
                 </div>
             </div>
         </div>
+
         <div class="display-flex-commander">
             <button type="submit" class="button-primary button-commander">Commander</button>
         </div>
