--- a/menu-palette.html
+++ b/menu-palette.html
@@ -24,13 +24,13 @@
         </header>
         <main>
             <div>
-               <img src="images/logo/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="#" class="img-francaise"> 
+               <img src="images/logo/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="#" class="img-francaise"> 
             </div>
         </main>
 
         <div class="card-generale-main">
             <div class="h1-main-heart">
-                <h1 class="font-h2-francaise">À la française</h1>
+                <h1 class="font-h2-francaise">La palette du goût</h1>
                 <p><i class="far fa-heart"></i></p>
             </div>
         </div>
@@ -38,79 +38,80 @@
         <div class="card-primary">
                 <h3 class="border-title-menu">ENTRÉES</h3>
                 <div class="cards-menu">
-                    <h3>Tartare de poulpe acidulé</h3>
+                    <h3>Fricassée d'escargot</h3>
                     <div class="flex-plat-prix">
-                        <p>Aux zests d'orange</p>
+                        <p>Au piment d'Espelette</p>
                         <p class="p-prix">25€</p>
                     </div>
                 </div>
 
                 <div class="cards-menu">
-                    <h3>Velouté de légumes d'antan</h3>
+                    <h3>Foie gras de canard mi-cuit</h3>
                     <div class="flex-plat-prix">
-                        <p>Carotte, panais, topinambour</p>
+                        <p>Et ses copeaux de truffe noire</p>
                         <p class="p-prix">35€</p>
                     </div>
                 </div>
 
                 <div class="cards-menu" >
-                    <h3>Soupe à l'oignon</h3>
+                    <h3>Oeuf au plat</h3>
                     <div class="flex-plat-prix">
-                        <p>Revisitée</p>
+                        <p>Assaisonné à la truffe sur lit de caviar</p>
                         <p class="p-prix">20€</p>
                     </div>
                 </div>
 
             <h3 class="border-title-menu">PLATS</h3>
             <div class="cards-menu">
-                <h3>Coquilles Saint-Jacques</h3>
+                <h3>Filet de boeuf aux herbes</h3>
                 <div class="flex-plat-prix">
-                    <p>Accompagnées d'une purée de panais</p>
+                    <p>Accompagné de sa ribambelle de légumes</p>
                     <p class="p-prix">40€</p>
                 </div>
             </div>
 
             <div class="cards-menu">
-                <h3>Magret de canard</h3>
+                <h3>Parmentier de queue de boeuf</h3>
                 <div class="flex-plat-prix">
-                    <p>Et parmentier de pommes de terres</p>
+                    <p>À la truffe noire sur sa purée de panais</p>
                     <p class="p-prix">35€</p>
                 </div>
             </div>
 
             <div class="cards-menu">
-                <h3>Pigeonneau d'Ille-et-Vilaine</h3>
+                <h3>Filet de turbot</h3>
                 <div class="flex-plat-prix">
-                    <p>Sur son lit de gnocchis aux légumes</p>
+                    <p>Aux agrumes</p>
                     <p class="p-prix">44€</p>
                 </div>
             </div>
 
             <h3 class="border-title-menu">DESSERTS</h3>
             <div class="cards-menu">
-                <h3>Pétales de violettes glacés</h3>
+                <h3>Paris-Brest</h3>
                 <div class="flex-plat-prix">
-                    <p>Et purée de noisettes</p>
+                    <p>Revisité</p>
                     <p class="p-prix">18€</p>
                 </div>
             </div>
 
             <div class="cards-menu">
-                <h3>Fondant au chocolat</h3>
+                <h3>Macaron au chocolat d'exception</h3>
                 <div class="flex-plat-prix">
-                    <p>Revisité</p>
+                    <p>Et glace à la vanille de Madagascar</p>
                     <p class="p-prix">22€</p>
                 </div>
             </div>
 
             <div class="cards-menu">
-                <h3>Millefeuille croustillant</h3>
+                <h3>Mousse au chocolat</h3>
                 <div class="flex-plat-prix">
-                    <p>Myrtilles et pâte d'amande</p>
+                    <p>Au piment d'Espelette et à la truffe noire</p>
                     <p class="p-prix">23€</p>
                 </div>
             </div>
         </div>
+
         <div class="display-flex-commander">
             <button type="submit" class="button-primary button-commander">Commander</button>
         </div>
