--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         <p class="p-footer"><i class="fas fa-utensils icon-footer"></i> Proposer un restaurant</p>
         <p class="p-footer"><i class="fas fa-hands-helping icon-footer"></i> Devenir partenaire</p>
         <p class="p-footer">Mentions légales</p>
-        <p class="p-footer" class="contact">Contact</p>
+        <p class="p-footer contact">Contact</p>
     </footer> 
 </body>
 </html>
