travail sur l'animation des cards menu, finition à faire au niveau du click

--- a/menu-delice.html
+++ b/menu-delice.html
@@ -42,14 +42,16 @@
                     <div class="flex-plat-prix">
                         <p>Assaisonné au yuzu</p>
                         <p class="p-prix">25€</p>
+                        <div class="green-box"><i class="fas fa-check-circle"></i></div>
                     </div>
                 </div>
 
                 <div class="cards-menu">
                     <h3>Bouchée de homard croustillant</h3>
                     <div class="flex-plat-prix">
-                        <p>Et sa farandole de petits légumes</p>
+                        <p>Et sa farandole de petits lég<span class="change-content"></span></p>
                         <p class="p-prix">35€</p>
+                        <div class="green-box"><i class="fas fa-check-circle"></i></div>
                     </div>
                 </div>
 
@@ -58,6 +60,7 @@
                     <div class="flex-plat-prix">
                         <p>Aux truffes</p>
                         <p class="p-prix">20€</p>
+                        <div class="green-box"><i class="fas fa-check-circle"></i></div>
                     </div>
                 </div>
 
