ajout de l'animation card sur l'ensemble des cards, reflexion sur l'animation ... des p et h3

--- a/menu-delice.html
+++ b/menu-delice.html
@@ -47,7 +47,7 @@
                 </div>
 
                 <div class="cards-menu">
-                    <h3>Bouchée de homard croustillant</h3>
+                    <h3>Bouchée de homard croust<span class="change-content-croustillant"></span></h3>
                     <div class="flex-plat-prix">
                         <p>Et sa farandole de petits lég<span class="change-content"></span></p>
                         <p class="p-prix">35€</p>
@@ -66,10 +66,11 @@
 
             <h3 class="border-title-menu">PLATS</h3>
             <div class="cards-menu">
-                <h3>Poulet rôti aux herbes de Provence</h3>
+                <h3>Poulet rôti aux herbes de Pro<span class="change-content-provence"></span></h3>
                 <div class="flex-plat-prix">
                     <p>Et sa crème de truffe</p>
                     <p class="p-prix">40€</p>
+                    <div class="green-box"><i class="fas fa-check-circle"></i></div>
                 </div>
             </div>
 
@@ -78,6 +79,7 @@
                 <div class="flex-plat-prix">
                     <p>Et ses légumes de saison</p>
                     <p class="p-prix">35€</p>
+                    <div class="green-box"><i class="fas fa-check-circle"></i></div>
                 </div>
             </div>
 
@@ -86,6 +88,7 @@
                 <div class="flex-plat-prix">
                     <p>Et sa purée de panais</p>
                     <p class="p-prix">44€</p>
+                    <div class="green-box"><i class="fas fa-check-circle"></i></div>
                 </div>
             </div>
 
@@ -95,6 +98,7 @@
                 <div class="flex-plat-prix">
                     <p>Du chef</p>
                     <p class="p-prix">18€</p>
+                    <div class="green-box"><i class="fas fa-check-circle"></i></div>
                 </div>
             </div>
 
@@ -103,6 +107,7 @@
                 <div class="flex-plat-prix">
                     <p>Revisitée</p>
                     <p class="p-prix">22€</p>
+                    <div class="green-box"><i class="fas fa-check-circle"></i></div>
                 </div>
             </div>
 
@@ -111,6 +116,7 @@
                 <div class="flex-plat-prix">
                     <p>À la noisette</p>
                     <p class="p-prix">23€</p>
+                    <div class="green-box"><i class="fas fa-check-circle"></i></div>
                 </div>
             </div>
         </div>
