--- a/menu-francaise.html
+++ b/menu-francaise.html
@@ -42,6 +42,7 @@
                     <div class="flex-plat-prix">
                         <p>Aux zests d'orange</p>
                         <p class="p-prix">25€</p>
+                        <div class="green-box"><i class="fas fa-check-circle"></i></div>
                     </div>
                 </div>
 
@@ -50,6 +51,7 @@
                     <div class="flex-plat-prix">
                         <p>Carotte, panais, topinambour</p>
                         <p class="p-prix">35€</p>
+                        <div class="green-box"><i class="fas fa-check-circle"></i></div>
                     </div>
                 </div>
 
@@ -58,6 +60,7 @@
                     <div class="flex-plat-prix">
                         <p>Revisitée</p>
                         <p class="p-prix">20€</p>
+                        <div class="green-box"><i class="fas fa-check-circle"></i></div>
                     </div>
                 </div>
 
@@ -67,6 +70,7 @@
                 <div class="flex-plat-prix">
                     <p>Accompagnées d'une purée de panais</p>
                     <p class="p-prix">40€</p>
+                    <div class="green-box"><i class="fas fa-check-circle"></i></div>
                 </div>
             </div>
 
@@ -75,6 +79,7 @@
                 <div class="flex-plat-prix">
                     <p>Et parmentier de pommes de terres</p>
                     <p class="p-prix">35€</p>
+                    <div class="green-box"><i class="fas fa-check-circle"></i></div>
                 </div>
             </div>
 
@@ -83,6 +88,7 @@
                 <div class="flex-plat-prix">
                     <p>Sur son lit de gnocchis aux légumes</p>
                     <p class="p-prix">44€</p>
+                    <div class="green-box"><i class="fas fa-check-circle"></i></div>
                 </div>
             </div>
 
@@ -92,6 +98,7 @@
                 <div class="flex-plat-prix">
                     <p>Et purée de noisettes</p>
                     <p class="p-prix">18€</p>
+                    <div class="green-box"><i class="fas fa-check-circle"></i></div>
                 </div>
             </div>
 
@@ -100,6 +107,7 @@
                 <div class="flex-plat-prix">
                     <p>Revisité</p>
                     <p class="p-prix">22€</p>
+                    <div class="green-box"><i class="fas fa-check-circle"></i></div>
                 </div>
             </div>
 
@@ -108,6 +116,7 @@
                 <div class="flex-plat-prix">
                     <p>Myrtilles et pâte d'amande</p>
                     <p class="p-prix">23€</p>
+                    <div class="green-box"><i class="fas fa-check-circle"></i></div>
                 </div>
             </div>
         </div>
