--- a/menu-palette.html
+++ b/menu-palette.html
@@ -42,6 +42,7 @@
                     <div class="flex-plat-prix">
                         <p>Au piment d'Espelette</p>
                         <p class="p-prix">25€</p>
+                        <div class="green-box"><i class="fas fa-check-circle"></i></div>
                     </div>
                 </div>
 
@@ -50,6 +51,7 @@
                     <div class="flex-plat-prix">
                         <p>Et ses copeaux de truffe noire</p>
                         <p class="p-prix">35€</p>
+                        <div class="green-box"><i class="fas fa-check-circle"></i></div>
                     </div>
                 </div>
 
@@ -58,6 +60,7 @@
                     <div class="flex-plat-prix">
                         <p>Assaisonné à la truffe sur lit de caviar</p>
                         <p class="p-prix">20€</p>
+                        <div class="green-box"><i class="fas fa-check-circle"></i></div>
                     </div>
                 </div>
 
@@ -67,6 +70,7 @@
                 <div class="flex-plat-prix">
                     <p>Accompagné de sa ribambelle de légumes</p>
                     <p class="p-prix">40€</p>
+                    <div class="green-box"><i class="fas fa-check-circle"></i></div>
                 </div>
             </div>
 
@@ -75,6 +79,7 @@
                 <div class="flex-plat-prix">
                     <p>À la truffe noire sur sa purée de panais</p>
                     <p class="p-prix">35€</p>
+                    <div class="green-box"><i class="fas fa-check-circle"></i></div>
                 </div>
             </div>
 
@@ -83,6 +88,7 @@
                 <div class="flex-plat-prix">
                     <p>Aux agrumes</p>
                     <p class="p-prix">44€</p>
+                    <div class="green-box"><i class="fas fa-check-circle"></i></div>
                 </div>
             </div>
 
@@ -92,6 +98,7 @@
                 <div class="flex-plat-prix">
                     <p>Revisité</p>
                     <p class="p-prix">18€</p>
+                    <div class="green-box"><i class="fas fa-check-circle"></i></div>
                 </div>
             </div>
 
@@ -100,6 +107,7 @@
                 <div class="flex-plat-prix">
                     <p>Et glace à la vanille de Madagascar</p>
                     <p class="p-prix">22€</p>
+                    <div class="green-box"><i class="fas fa-check-circle"></i></div>
                 </div>
             </div>
 
@@ -108,6 +116,7 @@
                 <div class="flex-plat-prix">
                     <p>Au piment d'Espelette et à la truffe noire</p>
                     <p class="p-prix">23€</p>
+                    <div class="green-box"><i class="fas fa-check-circle"></i></div>
                 </div>
             </div>
         </div>
