--- a/menu-enchantee.html
+++ b/menu-enchantee.html
@@ -42,6 +42,7 @@
                     <div class="flex-plat-prix">
                         <p>Accompagnés de leur crème à la truffe</p>
                         <p class="p-prix">25€</p>
+                        <div class="green-box"><i class="fas fa-check-circle"></i></div>
                     </div>
                 </div>
 
@@ -50,6 +51,7 @@
                     <div class="flex-plat-prix">
                         <p>Sur blini à la farine de blé noir</p>
                         <p class="p-prix">35€</p>
+                        <div class="green-box"><i class="fas fa-check-circle"></i></div>
                     </div>
                 </div>
 
@@ -58,6 +60,7 @@
                     <div class="flex-plat-prix">
                         <p>Mariné aux zestes d'orange</p>
                         <p class="p-prix">20€</p>
+                        <div class="green-box"><i class="fas fa-check-circle"></i></div>
                     </div>
                 </div>
 
@@ -66,6 +69,7 @@
                     <div class="flex-plat-prix">
                         <p>Confiture de figue et pain toasté</p>
                         <p class="p-prix">35€</p>
+                        <div class="green-box"><i class="fas fa-check-circle"></i></div>
                     </div>
                 </div>
 
@@ -75,6 +79,7 @@
                 <div class="flex-plat-prix">
                     <p>Sur lit de purée de céleri-rave</p>
                     <p class="p-prix">40€</p>
+                    <div class="green-box"><i class="fas fa-check-circle"></i></div>
                 </div>
             </div>
 
@@ -83,6 +88,7 @@
                 <div class="flex-plat-prix">
                     <p>Purée de patate douce</p>
                     <p class="p-prix">35€</p>
+                    <div class="green-box"><i class="fas fa-check-circle"></i></div>
                 </div>
             </div>
 
@@ -91,6 +97,7 @@
                 <div class="flex-plat-prix">
                     <p>Et riz sauvage aux zestes de citron</p>
                     <p class="p-prix">44€</p>
+                    <div class="green-box"><i class="fas fa-check-circle"></i></div>
                 </div>
             </div>
 
@@ -100,6 +107,7 @@
                 <div class="flex-plat-prix">
                     <p>Glace au caramel brun et sel de Guérande</p>
                     <p class="p-prix">18€</p>
+                    <div class="green-box"><i class="fas fa-check-circle"></i></div>
                 </div>
             </div>
 
@@ -108,6 +116,7 @@
                 <div class="flex-plat-prix">
                     <p>Avec son coulis de citron</p>
                     <p class="p-prix">22€</p>
+                    <div class="green-box"><i class="fas fa-check-circle"></i></div>
                 </div>
             </div>
 
@@ -116,6 +125,7 @@
                 <div class="flex-plat-prix">
                     <p>Déstructurée</p>
                     <p class="p-prix">23€</p>
+                    <div class="green-box"><i class="fas fa-check-circle"></i></div>
                 </div>
             </div>
         </div>
