--- a/menu-palette.html
+++ b/menu-palette.html
@@ -58,7 +58,7 @@
                 <div class="cards-menu" >
                     <h3>Oeuf au plat</h3>
                     <div class="flex-plat-prix">
-                        <p>Assaisonné à la truffe sur lit de caviar</p>
+                        <p>Assaisonné à la truffe sur l<span class="change-content-caviar"></span></p>
                         <p class="p-prix">20€</p>
                         <div class="green-box"><i class="fas fa-check-circle"></i></div>
                     </div>
@@ -68,7 +68,7 @@
             <div class="cards-menu">
                 <h3>Filet de boeuf aux herbes</h3>
                 <div class="flex-plat-prix">
-                    <p>Accompagné de sa ribambelle de légumes</p>
+                    <p>Accompagné de sa ribam<span class="change-content-ribambelle"></span></p>
                     <p class="p-prix">40€</p>
                     <div class="green-box"><i class="fas fa-check-circle"></i></div>
                 </div>
@@ -77,7 +77,7 @@
             <div class="cards-menu">
                 <h3>Parmentier de queue de boeuf</h3>
                 <div class="flex-plat-prix">
-                    <p>À la truffe noire sur sa purée de panais</p>
+                    <p>À la truffe noire sur sa puré<span class="change-content-panais"></span></p>
                     <p class="p-prix">35€</p>
                     <div class="green-box"><i class="fas fa-check-circle"></i></div>
                 </div>
@@ -103,9 +103,9 @@
             </div>
 
             <div class="cards-menu">
-                <h3>Macaron au chocolat d'exception</h3>
+                <h3>Macaron au chocolat d'e<span class="change-content-exception"></span></h3>
                 <div class="flex-plat-prix">
-                    <p>Et glace à la vanille de Madagascar</p>
+                    <p>Et glace à la vanille de M<span class="change-content-madagascar"></span></p>
                     <p class="p-prix">22€</p>
                     <div class="green-box"><i class="fas fa-check-circle"></i></div>
                 </div>
@@ -114,7 +114,7 @@
             <div class="cards-menu">
                 <h3>Mousse au chocolat</h3>
                 <div class="flex-plat-prix">
-                    <p>Au piment d'Espelette et à la truffe noire</p>
+                    <p>Au piment d'Espelette et à la tr<span class="change-content-truffe"></span></p>
                     <p class="p-prix">23€</p>
                     <div class="green-box"><i class="fas fa-check-circle"></i></div>
                 </div>
