finition de l'animation ... des textes

--- a/menu-enchantee.html
+++ b/menu-enchantee.html
@@ -40,7 +40,7 @@
                 <div class="cards-menu">
                     <h3>Ravioles de foie gras</h3>
                     <div class="flex-plat-prix">
-                        <p>Accompagnés de leur crème à la truffe</p>
+                        <p>Accompagnés de leur crèm<span class="change-content-truffe-enchante"></span></p>
                         <p class="p-prix">25€</p>
                         <div class="green-box"><i class="fas fa-check-circle"></i></div>
                     </div>
@@ -75,7 +75,7 @@
 
             <h3 class="border-title-menu">PLATS</h3>
             <div class="cards-menu">
-                <h3>Noix de coquilles Saint-Jacques</h3>
+                <h3>Noix de coquilles Saint-J<span class="change-content-jacques"></span></h3>
                 <div class="flex-plat-prix">
                     <p>Sur lit de purée de céleri-rave</p>
                     <p class="p-prix">40€</p>
@@ -95,7 +95,7 @@
             <div class="cards-menu">
                 <h3>Mijoté de queue de boeuf</h3>
                 <div class="flex-plat-prix">
-                    <p>Et riz sauvage aux zestes de citron</p>
+                    <p>Et riz sauvage aux zestes de <span class="change-content-citron"></span></p>
                     <p class="p-prix">44€</p>
                     <div class="green-box"><i class="fas fa-check-circle"></i></div>
                 </div>
@@ -105,7 +105,7 @@
             <div class="cards-menu">
                 <h3>Macaron noisette et chocolat</h3>
                 <div class="flex-plat-prix">
-                    <p>Glace au caramel brun et sel de Guérande</p>
+                    <p>Glace au caramel brun et sel <span class="change-content-guerande"></span></p>
                     <p class="p-prix">18€</p>
                     <div class="green-box"><i class="fas fa-check-circle"></i></div>
                 </div>
