--- a/menu-francaise.html
+++ b/menu-francaise.html
@@ -68,7 +68,7 @@
             <div class="cards-menu">
                 <h3>Coquilles Saint-Jacques</h3>
                 <div class="flex-plat-prix">
-                    <p>Accompagnées d'une purée de panais</p>
+                    <p>Accompagnées d'une purée <span class="change-content-puree-panais"></span></p>
                     <p class="p-prix">40€</p>
                     <div class="green-box"><i class="fas fa-check-circle"></i></div>
                 </div>
@@ -77,7 +77,7 @@
             <div class="cards-menu">
                 <h3>Magret de canard</h3>
                 <div class="flex-plat-prix">
-                    <p>Et parmentier de pommes de terres</p>
+                    <p>Et parmentier de pommes <span class="change-content-terre"></span></p>
                     <p class="p-prix">35€</p>
                     <div class="green-box"><i class="fas fa-check-circle"></i></div>
                 </div>
@@ -86,7 +86,7 @@
             <div class="cards-menu">
                 <h3>Pigeonneau d'Ille-et-Vilaine</h3>
                 <div class="flex-plat-prix">
-                    <p>Sur son lit de gnocchis aux légumes</p>
+                    <p>Sur son lit de gnocchis <span class="change-content-gnocchis"></span></p>
                     <p class="p-prix">44€</p>
                     <div class="green-box"><i class="fas fa-check-circle"></i></div>
                 </div>
