mise en place animation apparition des cards

--- a/menu-delice.html
+++ b/menu-delice.html
@@ -37,7 +37,7 @@
             
         <div class="card-primary">
                 <h3 class="border-title-menu">ENTRÉES</h3>
-                <div class="cards-menu">
+                <div class="cards-menu cards-entree-animation-1">
                     <h3>Tartare de thon</h3>
                     <div class="flex-plat-prix">
                         <p>Assaisonné au yuzu</p>
@@ -46,7 +46,7 @@
                     </div>
                 </div>
 
-                <div class="cards-menu">
+                <div class="cards-menu cards-entree-animation-2">
                     <h3>Bouchée de homard croust<span class="change-content-croustillant"></span></h3>
                     <div class="flex-plat-prix">
                         <p>Et sa farandole de petits lég<span class="change-content"></span></p>
@@ -55,7 +55,7 @@
                     </div>
                 </div>
 
-                <div class="cards-menu" >
+                <div class="cards-menu cards-entree-animation-3" >
                     <h3>Velouté de cèpes</h3>
                     <div class="flex-plat-prix">
                         <p>Aux truffes</p>
@@ -65,7 +65,7 @@
                 </div>
 
             <h3 class="border-title-menu">PLATS</h3>
-            <div class="cards-menu">
+            <div class="cards-menu cards-plat-animation-1">
                 <h3>Poulet rôti aux herbes de Pro<span class="change-content-provence"></span></h3>
                 <div class="flex-plat-prix">
                     <p>Et sa crème de truffe</p>
@@ -74,7 +74,7 @@
                 </div>
             </div>
 
-            <div class="cards-menu">
+            <div class="cards-menu cards-plat-animation-2">
                 <h3>Langouste rôtie</h3>
                 <div class="flex-plat-prix">
                     <p>Et ses légumes de saison</p>
@@ -83,7 +83,7 @@
                 </div>
             </div>
 
-            <div class="cards-menu">
+            <div class="cards-menu cards-plat-animation-3">
                 <h3>Côte de boeuf Angus</h3>
                 <div class="flex-plat-prix">
                     <p>Et sa purée de panais</p>
@@ -93,7 +93,7 @@
             </div>
 
             <h3 class="border-title-menu">DESSERTS</h3>
-            <div class="cards-menu">
+            <div class="cards-menu cards-dessert-animation-1">
                 <h3>Farandole de desserts</h3>
                 <div class="flex-plat-prix">
                     <p>Du chef</p>
@@ -102,7 +102,7 @@
                 </div>
             </div>
 
-            <div class="cards-menu">
+            <div class="cards-menu cards-dessert-animation-2">
                 <h3>Crème brulée</h3>
                 <div class="flex-plat-prix">
                     <p>Revisitée</p>
@@ -111,7 +111,7 @@
                 </div>
             </div>
 
-            <div class="cards-menu">
+            <div class="cards-menu cards-dessert-animation-3">
                 <h3>Tiramisu</h3>
                 <div class="flex-plat-prix">
                     <p>À la noisette</p>
