--- a/menu-francaise.html
+++ b/menu-francaise.html
@@ -37,7 +37,7 @@
             
         <div class="card-primary">
                 <h3 class="border-title-menu">ENTRÉES</h3>
-                <div class="cards-menu">
+                <div class="cards-menu cards-entree-animation-1">
                     <h3>Tartare de poulpe acidulé</h3>
                     <div class="flex-plat-prix">
                         <p>Aux zests d'orange</p>
@@ -46,7 +46,7 @@
                     </div>
                 </div>
 
-                <div class="cards-menu">
+                <div class="cards-menu cards-entree-animation-2">
                     <h3>Velouté de légumes d'antan</h3>
                     <div class="flex-plat-prix">
                         <p>Carotte, panais, topinambour</p>
@@ -55,7 +55,7 @@
                     </div>
                 </div>
 
-                <div class="cards-menu" >
+                <div class="cards-menu cards-entree-animation-3" >
                     <h3>Soupe à l'oignon</h3>
                     <div class="flex-plat-prix">
                         <p>Revisitée</p>
@@ -65,7 +65,7 @@
                 </div>
 
             <h3 class="border-title-menu">PLATS</h3>
-            <div class="cards-menu">
+            <div class="cards-menu cards-plat-animation-1">
                 <h3>Coquilles Saint-Jacques</h3>
                 <div class="flex-plat-prix">
                     <p>Accompagnées d'une purée <span class="change-content-puree-panais"></span></p>
@@ -74,7 +74,7 @@
                 </div>
             </div>
 
-            <div class="cards-menu">
+            <div class="cards-menu cards-plat-animation-2">
                 <h3>Magret de canard</h3>
                 <div class="flex-plat-prix">
                     <p>Et parmentier de pommes <span class="change-content-terre"></span></p>
@@ -83,7 +83,7 @@
                 </div>
             </div>
 
-            <div class="cards-menu">
+            <div class="cards-menu cards-plat-animation-3">
                 <h3>Pigeonneau d'Ille-et-Vilaine</h3>
                 <div class="flex-plat-prix">
                     <p>Sur son lit de gnocchis <span class="change-content-gnocchis"></span></p>
@@ -93,7 +93,7 @@
             </div>
 
             <h3 class="border-title-menu">DESSERTS</h3>
-            <div class="cards-menu">
+            <div class="cards-menu cards-dessert-animation-1">
                 <h3>Pétales de violettes glacés</h3>
                 <div class="flex-plat-prix">
                     <p>Et purée de noisettes</p>
@@ -102,7 +102,7 @@
                 </div>
             </div>
 
-            <div class="cards-menu">
+            <div class="cards-menu cards-dessert-animation-2">
                 <h3>Fondant au chocolat</h3>
                 <div class="flex-plat-prix">
                     <p>Revisité</p>
@@ -111,7 +111,7 @@
                 </div>
             </div>
 
-            <div class="cards-menu">
+            <div class="cards-menu cards-dessert-animation-3">
                 <h3>Millefeuille croustillant</h3>
                 <div class="flex-plat-prix">
                     <p>Myrtilles et pâte d'amande</p>
