--- a/menu-enchantee.html
+++ b/menu-enchantee.html
@@ -37,7 +37,7 @@
             
         <div class="card-primary">
                 <h3 class="border-title-menu">ENTRÉES</h3>
-                <div class="cards-menu">
+                <div class="cards-menu cards-entree-animation-1">
                     <h3>Ravioles de foie gras</h3>
                     <div class="flex-plat-prix">
                         <p>Accompagnés de leur crèm<span class="change-content-truffe-enchante"></span></p>
@@ -46,7 +46,7 @@
                     </div>
                 </div>
 
-                <div class="cards-menu">
+                <div class="cards-menu cards-entree-animation-2">
                     <h3>Caviar osciètre</h3>
                     <div class="flex-plat-prix">
                         <p>Sur blini à la farine de blé noir</p>
@@ -55,7 +55,7 @@
                     </div>
                 </div>
 
-                <div class="cards-menu" >
+                <div class="cards-menu cards-entree-animation-3" >
                     <h3>Homard et espuma de potiron</h3>
                     <div class="flex-plat-prix">
                         <p>Mariné aux zestes d'orange</p>
@@ -64,7 +64,7 @@
                     </div>
                 </div>
 
-                <div class="cards-menu" >
+                <div class="cards-menu cards-entree-animation-4" >
                     <h3>Foie gras de canard cuit entier</h3>
                     <div class="flex-plat-prix">
                         <p>Confiture de figue et pain toasté</p>
@@ -74,7 +74,7 @@
                 </div>
 
             <h3 class="border-title-menu">PLATS</h3>
-            <div class="cards-menu">
+            <div class="cards-menu cards-plat-animation-1">
                 <h3>Noix de coquilles Saint-J<span class="change-content-jacques"></span></h3>
                 <div class="flex-plat-prix">
                     <p>Sur lit de purée de céleri-rave</p>
@@ -83,7 +83,7 @@
                 </div>
             </div>
 
-            <div class="cards-menu">
+            <div class="cards-menu cards-plat-animation-2">
                 <h3>Langoustine poêlée</h3>
                 <div class="flex-plat-prix">
                     <p>Purée de patate douce</p>
@@ -92,7 +92,7 @@
                 </div>
             </div>
 
-            <div class="cards-menu">
+            <div class="cards-menu cards-plat-animation-3">
                 <h3>Mijoté de queue de boeuf</h3>
                 <div class="flex-plat-prix">
                     <p>Et riz sauvage aux zestes de <span class="change-content-citron"></span></p>
@@ -102,7 +102,7 @@
             </div>
 
             <h3 class="border-title-menu">DESSERTS</h3>
-            <div class="cards-menu">
+            <div class="cards-menu cards-dessert-animation-1">
                 <h3>Macaron noisette et chocolat</h3>
                 <div class="flex-plat-prix">
                     <p>Glace au caramel brun et sel <span class="change-content-guerande"></span></p>
@@ -111,7 +111,7 @@
                 </div>
             </div>
 
-            <div class="cards-menu">
+            <div class="cards-menu cards-dessert-animation-2">
                 <h3>Baba au rhum revisité</h3>
                 <div class="flex-plat-prix">
                     <p>Avec son coulis de citron</p>
@@ -120,7 +120,7 @@
                 </div>
             </div>
 
-            <div class="cards-menu">
+            <div class="cards-menu cards-dessert-animation-3">
                 <h3>Tarte au citron meringuée</h3>
                 <div class="flex-plat-prix">
                     <p>Déstructurée</p>
