--- a/menu-palette.html
+++ b/menu-palette.html
@@ -37,7 +37,7 @@
             
         <div class="card-primary">
                 <h3 class="border-title-menu">ENTRÉES</h3>
-                <div class="cards-menu">
+                <div class="cards-menu cards-entree-animation-1">
                     <h3>Fricassée d'escargot</h3>
                     <div class="flex-plat-prix">
                         <p>Au piment d'Espelette</p>
@@ -46,7 +46,7 @@
                     </div>
                 </div>
 
-                <div class="cards-menu">
+                <div class="cards-menu cards-entree-animation-2">
                     <h3>Foie gras de canard mi-cuit</h3>
                     <div class="flex-plat-prix">
                         <p>Et ses copeaux de truffe noire</p>
@@ -55,7 +55,7 @@
                     </div>
                 </div>
 
-                <div class="cards-menu" >
+                <div class="cards-menu cards-entree-animation-3" >
                     <h3>Oeuf au plat</h3>
                     <div class="flex-plat-prix">
                         <p>Assaisonné à la truffe sur l<span class="change-content-caviar"></span></p>
@@ -65,7 +65,7 @@
                 </div>
 
             <h3 class="border-title-menu">PLATS</h3>
-            <div class="cards-menu">
+            <div class="cards-menu cards-plat-animation-1">
                 <h3>Filet de boeuf aux herbes</h3>
                 <div class="flex-plat-prix">
                     <p>Accompagné de sa ribam<span class="change-content-ribambelle"></span></p>
@@ -74,7 +74,7 @@
                 </div>
             </div>
 
-            <div class="cards-menu">
+            <div class="cards-menu cards-plat-animation-2">
                 <h3>Parmentier de queue de boeuf</h3>
                 <div class="flex-plat-prix">
                     <p>À la truffe noire sur sa puré<span class="change-content-panais"></span></p>
@@ -83,7 +83,7 @@
                 </div>
             </div>
 
-            <div class="cards-menu">
+            <div class="cards-menu cards-plat-animation-3">
                 <h3>Filet de turbot</h3>
                 <div class="flex-plat-prix">
                     <p>Aux agrumes</p>
@@ -93,7 +93,7 @@
             </div>
 
             <h3 class="border-title-menu">DESSERTS</h3>
-            <div class="cards-menu">
+            <div class="cards-menu cards-dessert-animation-1">
                 <h3>Paris-Brest</h3>
                 <div class="flex-plat-prix">
                     <p>Revisité</p>
@@ -102,7 +102,7 @@
                 </div>
             </div>
 
-            <div class="cards-menu">
+            <div class="cards-menu cards-dessert-animation-2">
                 <h3>Macaron au chocolat d'e<span class="change-content-exception"></span></h3>
                 <div class="flex-plat-prix">
                     <p>Et glace à la vanille de M<span class="change-content-madagascar"></span></p>
@@ -111,7 +111,7 @@
                 </div>
             </div>
 
-            <div class="cards-menu">
+            <div class="cards-menu cards-dessert-animation-3">
                 <h3>Mousse au chocolat</h3>
                 <div class="flex-plat-prix">
                     <p>Au piment d'Espelette et à la tr<span class="change-content-truffe"></span></p>
