finition de l'animation remplissage coeur

--- a/menu-enchantee.html
+++ b/menu-enchantee.html
@@ -32,6 +32,7 @@
             <div class="h1-main-heart">
                 <h1 class="font-h2-francaise">La note enchantée</h1>
                 <p><i class="far fa-heart"></i></p>
+                <p class="icon-heart-animation-menus"><i class="fas fa-heart"></i></p>
             </div>
         </div>
             
