--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
                     <div>
                         <p class="p-nouveau">Nouveau</p>
                         <p class="icon-card-heart"><i class="far fa-heart"></i></p>
+                        <p class="icon-heart-animation"><i class="fas fa-heart"></i></p>
                     </div>
                 </div>
             </div>
@@ -88,6 +89,7 @@
                     <div>
                         <p class="p-nouveau">Nouveau</p>
                         <p class="icon-card-heart"><i class="far fa-heart"></i></p>
+                        <p class="icon-heart-animation"><i class="fas fa-heart"></i></p>
                     </div>
                 </div> 
             </div>
@@ -103,6 +105,7 @@
                     </div>
                     <div>
                         <p class="icon-card-heart"><i class="far fa-heart"></i></p>
+                        <p class="icon-heart-animation"><i class="fas fa-heart"></i></p>
                     </div>
                 </div>
             </div>
@@ -118,6 +121,7 @@
                     </div>
                     <div>
                         <p class="icon-card-heart"><i class="far fa-heart"></i></p>
+                        <p class="icon-heart-animation"><i class="fas fa-heart"></i></p>
                     </div>
                 </div>
             </div>
