correction code animation ...

--- a/menu-delice.html
+++ b/menu-delice.html
@@ -48,9 +48,9 @@
                 </div>
 
                 <div class="cards-menu cards-entree-animation-2">
-                    <h3>Bouchée de homard croust<span class="change-content-croustillant"></span></h3>
+                    <h3 class="text-ellipsis">Bouchée de homard croustillant</h3>
                     <div class="flex-plat-prix">
-                        <p>Et sa farandole de petits lég<span class="change-content"></span></p>
+                        <p class="text-ellipsis">Et sa farandole de petits légumes</p>
                         <p class="p-prix">35€</p>
                         <div class="green-box"><i class="fas fa-check-circle"></i></div>
                     </div>
@@ -67,7 +67,7 @@
 
             <h3 class="border-title-menu">PLATS</h3>
             <div class="cards-menu cards-plat-animation-1">
-                <h3>Poulet rôti aux herbes de Pro<span class="change-content-provence"></span></h3>
+                <h3 class="text-ellipsis">Poulet rôti aux herbes de Provence</h3>
                 <div class="flex-plat-prix">
                     <p>Et sa crème de truffe</p>
                     <p class="p-prix">40€</p>
@@ -78,7 +78,7 @@
             <div class="cards-menu cards-plat-animation-2">
                 <h3>Langouste rôtie</h3>
                 <div class="flex-plat-prix">
-                    <p>Et ses légumes de saison</p>
+                    <p class="text-ellipsis">Et ses légumes de saison</p>
                     <p class="p-prix">35€</p>
                     <div class="green-box"><i class="fas fa-check-circle"></i></div>
                 </div>
@@ -131,7 +131,7 @@
             <p class="p-footer"><i class="fas fa-utensils icon-footer"></i> Proposer un restaurant</p>
             <p class="p-footer"><i class="fas fa-hands-helping icon-footer"></i> Devenir partenaire</p>
             <p class="p-footer">Mentions légales</p>
-            <p class="p-footer" id="contact">Contact</p>
+            <a href="mailto:ohmygood@contact.org" id="lien-contact"><p class="p-footer contact">Contact</p></a>
         </footer> 
     </body>
 </html>
