--- a/menu-enchantee.html
+++ b/menu-enchantee.html
@@ -41,7 +41,7 @@
                 <div class="cards-menu cards-entree-animation-1">
                     <h3>Ravioles de foie gras</h3>
                     <div class="flex-plat-prix">
-                        <p>Accompagnés de leur crèm<span class="change-content-truffe-enchante"></span></p>
+                        <p class="text-ellipsis">Accompagnés de leur crème à la truffe</p>
                         <p class="p-prix">25€</p>
                         <div class="green-box"><i class="fas fa-check-circle"></i></div>
                     </div>
@@ -50,25 +50,25 @@
                 <div class="cards-menu cards-entree-animation-2">
                     <h3>Caviar osciètre</h3>
                     <div class="flex-plat-prix">
-                        <p>Sur blini à la farine de blé noir</p>
+                        <p class="text-ellipsis">Sur blini à la farine de blé noir</p>
                         <p class="p-prix">35€</p>
                         <div class="green-box"><i class="fas fa-check-circle"></i></div>
                     </div>
                 </div>
 
                 <div class="cards-menu cards-entree-animation-3" >
-                    <h3>Homard et espuma de potiron</h3>
+                    <h3 class="text-ellipsis">Homard et espuma de potiron</h3>
                     <div class="flex-plat-prix">
-                        <p>Mariné aux zestes d'orange</p>
+                        <p class="text-ellipsis">Mariné aux zestes d'orange</p>
                         <p class="p-prix">20€</p>
                         <div class="green-box"><i class="fas fa-check-circle"></i></div>
                     </div>
                 </div>
 
                 <div class="cards-menu cards-entree-animation-4" >
-                    <h3>Foie gras de canard cuit entier</h3>
+                    <h3 class="text-ellipsis">Foie gras de canard cuit entier</h3>
                     <div class="flex-plat-prix">
-                        <p>Confiture de figue et pain toasté</p>
+                        <p class="text-ellipsis">Confiture de figue et pain toasté</p>
                         <p class="p-prix">35€</p>
                         <div class="green-box"><i class="fas fa-check-circle"></i></div>
                     </div>
@@ -76,9 +76,9 @@
 
             <h3 class="border-title-menu">PLATS</h3>
             <div class="cards-menu cards-plat-animation-1">
-                <h3>Noix de coquilles Saint-J<span class="change-content-jacques"></span></h3>
+                <h3 class="text-ellipsis">Noix de coquilles Saint-Jacques</h3>
                 <div class="flex-plat-prix">
-                    <p>Sur lit de purée de céleri-rave</p>
+                    <p class="text-ellipsis">Sur lit de purée de céleri-rave</p>
                     <p class="p-prix">40€</p>
                     <div class="green-box"><i class="fas fa-check-circle"></i></div>
                 </div>
@@ -94,9 +94,9 @@
             </div>
 
             <div class="cards-menu cards-plat-animation-3">
-                <h3>Mijoté de queue de boeuf</h3>
+                <h3 class="text-ellipsis">Mijoté de queue de boeuf</h3>
                 <div class="flex-plat-prix">
-                    <p>Et riz sauvage aux zestes de <span class="change-content-citron"></span></p>
+                    <p class="text-ellipsis">Et riz sauvage aux zests de citron</p>
                     <p class="p-prix">44€</p>
                     <div class="green-box"><i class="fas fa-check-circle"></i></div>
                 </div>
@@ -104,9 +104,9 @@
 
             <h3 class="border-title-menu">DESSERTS</h3>
             <div class="cards-menu cards-dessert-animation-1">
-                <h3>Macaron noisette et chocolat</h3>
+                <h3 class="text-ellipsis">Macaron noisette et chocolat</h3>
                 <div class="flex-plat-prix">
-                    <p>Glace au caramel brun et sel <span class="change-content-guerande"></span></p>
+                    <p class="text-ellipsis">Glace au caramel brun et sel de Guérande</p>
                     <p class="p-prix">18€</p>
                     <div class="green-box"><i class="fas fa-check-circle"></i></div>
                 </div>
@@ -115,14 +115,14 @@
             <div class="cards-menu cards-dessert-animation-2">
                 <h3>Baba au rhum revisité</h3>
                 <div class="flex-plat-prix">
-                    <p>Avec son coulis de citron</p>
+                    <p class="text-ellipsis">Avec son coulis de citron</p>
                     <p class="p-prix">22€</p>
                     <div class="green-box"><i class="fas fa-check-circle"></i></div>
                 </div>
             </div>
 
             <div class="cards-menu cards-dessert-animation-3">
-                <h3>Tarte au citron meringuée</h3>
+                <h3 class="text-ellipsis">Tarte au citron meringuée</h3>
                 <div class="flex-plat-prix">
                     <p>Déstructurée</p>
                     <p class="p-prix">23€</p>
@@ -140,7 +140,7 @@
             <p class="p-footer"><i class="fas fa-utensils icon-footer"></i> Proposer un restaurant</p>
             <p class="p-footer"><i class="fas fa-hands-helping icon-footer"></i> Devenir partenaire</p>
             <p class="p-footer">Mentions légales</p>
-            <p class="p-footer" id="contact">Contact</p>
+            <a href="mailto:ohmygood@contact.org" id="lien-contact"><p class="p-footer contact">Contact</p></a>
         </footer> 
     </body>
 </html>
