--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         <p class="p-footer"><i class="fas fa-utensils icon-footer"></i> Proposer un restaurant</p>
         <p class="p-footer"><i class="fas fa-hands-helping icon-footer"></i> Devenir partenaire</p>
         <p class="p-footer">Mentions légales</p>
-        <p class="p-footer contact">Contact</p>
+        <a href="mailto:ohmygood@contact.org" id="lien-contact"><p class="p-footer contact">Contact</p></a>
     </footer> 
 </body>
 </html>
