--- a/menu-francaise.html
+++ b/menu-francaise.html
@@ -39,7 +39,7 @@
         <div class="card-primary">
                 <h3 class="border-title-menu">ENTRÉES</h3>
                 <div class="cards-menu cards-entree-animation-1">
-                    <h3>Tartare de poulpe acidulé</h3>
+                    <h3 class="text-ellipsis">Tartare de poulpe acidulé</h3>
                     <div class="flex-plat-prix">
                         <p>Aux zests d'orange</p>
                         <p class="p-prix">25€</p>
@@ -48,9 +48,9 @@
                 </div>
 
                 <div class="cards-menu cards-entree-animation-2">
-                    <h3>Velouté de légumes d'antan</h3>
+                    <h3 class="text-ellipsis">Velouté de légumes d'antan</h3>
                     <div class="flex-plat-prix">
-                        <p>Carotte, panais, topinambour</p>
+                        <p class="text-ellipsis">Carotte, panais, topinambour</p>
                         <p class="p-prix">35€</p>
                         <div class="green-box"><i class="fas fa-check-circle"></i></div>
                     </div>
@@ -69,7 +69,7 @@
             <div class="cards-menu cards-plat-animation-1">
                 <h3>Coquilles Saint-Jacques</h3>
                 <div class="flex-plat-prix">
-                    <p>Accompagnées d'une purée <span class="change-content-puree-panais"></span></p>
+                    <p class="text-ellipsis">Accompagnées d'une purée de panais</p>
                     <p class="p-prix">40€</p>
                     <div class="green-box"><i class="fas fa-check-circle"></i></div>
                 </div>
@@ -78,16 +78,16 @@
             <div class="cards-menu cards-plat-animation-2">
                 <h3>Magret de canard</h3>
                 <div class="flex-plat-prix">
-                    <p>Et parmentier de pommes <span class="change-content-terre"></span></p>
+                    <p class="text-ellipsis">Et parmentier de pommes de terres</p>
                     <p class="p-prix">35€</p>
                     <div class="green-box"><i class="fas fa-check-circle"></i></div>
                 </div>
             </div>
 
             <div class="cards-menu cards-plat-animation-3">
-                <h3>Pigeonneau d'Ille-et-Vilaine</h3>
+                <h3 class="text-ellipsis">Pigeonneau d'Ille-et-Vilaine</h3>
                 <div class="flex-plat-prix">
-                    <p>Sur son lit de gnocchis <span class="change-content-gnocchis"></span></p>
+                    <p class="text-ellipsis">Sur son lit de gnocchis aux légumes</p>
                     <p class="p-prix">44€</p>
                     <div class="green-box"><i class="fas fa-check-circle"></i></div>
                 </div>
@@ -95,7 +95,7 @@
 
             <h3 class="border-title-menu">DESSERTS</h3>
             <div class="cards-menu cards-dessert-animation-1">
-                <h3>Pétales de violettes glacés</h3>
+                <h3 class="text-ellipsis">Pétales de violettes glacés</h3>
                 <div class="flex-plat-prix">
                     <p>Et purée de noisettes</p>
                     <p class="p-prix">18€</p>
@@ -115,7 +115,7 @@
             <div class="cards-menu cards-dessert-animation-3">
                 <h3>Millefeuille croustillant</h3>
                 <div class="flex-plat-prix">
-                    <p>Myrtilles et pâte d'amande</p>
+                    <p class="text-ellipsis">Myrtilles et pâte d'amande</p>
                     <p class="p-prix">23€</p>
                     <div class="green-box"><i class="fas fa-check-circle"></i></div>
                 </div>
@@ -130,7 +130,7 @@
             <p class="p-footer"><i class="fas fa-utensils icon-footer"></i> Proposer un restaurant</p>
             <p class="p-footer"><i class="fas fa-hands-helping icon-footer"></i> Devenir partenaire</p>
             <p class="p-footer">Mentions légales</p>
-            <p class="p-footer" id="contact">Contact</p>
+            <a href="mailto:ohmygood@contact.org" id="lien-contact"><p class="p-footer contact">Contact</p></a>
         </footer> 
     </body>
 </html>
