--- a/menu-palette.html
+++ b/menu-palette.html
@@ -48,9 +48,9 @@
                 </div>
 
                 <div class="cards-menu cards-entree-animation-2">
-                    <h3>Foie gras de canard mi-cuit</h3>
+                    <h3 class="text-ellipsis">Foie gras de canard mi-cuit</h3>
                     <div class="flex-plat-prix">
-                        <p>Et ses copeaux de truffe noire</p>
+                        <p class="text-ellipsis">Et ses copeaux de truffe noire</p>
                         <p class="p-prix">35€</p>
                         <div class="green-box"><i class="fas fa-check-circle"></i></div>
                     </div>
@@ -59,7 +59,7 @@
                 <div class="cards-menu cards-entree-animation-3" >
                     <h3>Oeuf au plat</h3>
                     <div class="flex-plat-prix">
-                        <p>Assaisonné à la truffe sur l<span class="change-content-caviar"></span></p>
+                        <p class="text-ellipsis">Assaisonné à la truffe sur lit de caviar</p>
                         <p class="p-prix">20€</p>
                         <div class="green-box"><i class="fas fa-check-circle"></i></div>
                     </div>
@@ -67,18 +67,18 @@
 
             <h3 class="border-title-menu">PLATS</h3>
             <div class="cards-menu cards-plat-animation-1">
-                <h3>Filet de boeuf aux herbes</h3>
+                <h3 class="text-ellipsis">Filet de boeuf aux herbes</h3>
                 <div class="flex-plat-prix">
-                    <p>Accompagné de sa ribam<span class="change-content-ribambelle"></span></p>
+                    <p class="text-ellipsis">Accompagné de sa ribambelle de légumes</p>
                     <p class="p-prix">40€</p>
                     <div class="green-box"><i class="fas fa-check-circle"></i></div>
                 </div>
             </div>
 
             <div class="cards-menu cards-plat-animation-2">
-                <h3>Parmentier de queue de boeuf</h3>
+                <h3 class="text-ellipsis">Parmentier de queue de boeuf</h3>
                 <div class="flex-plat-prix">
-                    <p>À la truffe noire sur sa puré<span class="change-content-panais"></span></p>
+                    <p class="text-ellipsis">À la truffe noire sur sa purée de panais</p>
                     <p class="p-prix">35€</p>
                     <div class="green-box"><i class="fas fa-check-circle"></i></div>
                 </div>
@@ -104,9 +104,9 @@
             </div>
 
             <div class="cards-menu cards-dessert-animation-2">
-                <h3>Macaron au chocolat d'e<span class="change-content-exception"></span></h3>
+                <h3 class="text-ellipsis">Macaron au chocolat d'exception</h3>
                 <div class="flex-plat-prix">
-                    <p>Et glace à la vanille de M<span class="change-content-madagascar"></span></p>
+                    <p class="text-ellipsis">Et glace à la vanille de Madagascar</p>
                     <p class="p-prix">22€</p>
                     <div class="green-box"><i class="fas fa-check-circle"></i></div>
                 </div>
@@ -115,7 +115,7 @@
             <div class="cards-menu cards-dessert-animation-3">
                 <h3>Mousse au chocolat</h3>
                 <div class="flex-plat-prix">
-                    <p>Au piment d'Espelette et à la tr<span class="change-content-truffe"></span></p>
+                    <p class="text-ellipsis">Au piment d'Espelette et à la truffe noire</p>
                     <p class="p-prix">23€</p>
                     <div class="green-box"><i class="fas fa-check-circle"></i></div>
                 </div>
@@ -131,7 +131,7 @@
             <p class="p-footer"><i class="fas fa-utensils icon-footer"></i> Proposer un restaurant</p>
             <p class="p-footer"><i class="fas fa-hands-helping icon-footer"></i> Devenir partenaire</p>
             <p class="p-footer">Mentions légales</p>
-            <p class="p-footer" id="contact">Contact</p>
+            <a href="mailto:ohmygood@contact.org" id="lien-contact"><p class="p-footer contact">Contact</p></a>
         </footer> 
     </body>
 </html>
