corrections animation coeur, amelioration du code, finition du responsive sur grand écran

--- a/menu-palette.html
+++ b/menu-palette.html
@@ -25,7 +25,7 @@
 
         <div class="menu-responsive">
             <main class= "responsive-main">
-                <img src="images/logo/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="#" class="img-francaise">
+                <img src="images/logo/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="#" class="img-main">
                 <div class="card-generale-main">
                     <div class="h1-main-heart">
                         <h1 class="font-h2-francaise">La palette du goût</h1>
