--- a/menu-delice.html
+++ b/menu-delice.html
@@ -25,7 +25,7 @@
 
         <div class="menu-responsive">
             <main class= "responsive-main">
-                <img src="images/logo/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="#" class="img-francaise">
+                <img src="images/logo/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="#" class="img-main">
                 <div class="card-generale-main">
                     <div class="h1-main-heart">
                         <h1 class="font-h2-francaise">Le délice des sens</h1>
