--- a/menu-enchantee.html
+++ b/menu-enchantee.html
@@ -25,7 +25,7 @@
 
         <div class="menu-responsive">
             <main class= "responsive-main">
-                <img src="images/logo/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="#" class="img-francaise">
+                <img src="images/logo/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="#" class="img-main img-responsive">
                 <div class="card-generale-main">
                     <div class="h1-main-heart">
                         <h1 class="font-h2-francaise">La note enchantée</h1>
