--- a/menu-francaise.html
+++ b/menu-francaise.html
@@ -25,7 +25,7 @@
         
         <div class="menu-responsive">
             <main class= "responsive-main">
-                <img src="images/logo/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="#" class="img-francaise"> 
+                <img src="images/logo/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="#" class="img-main"> 
                 <div class="card-generale-main">
                     <div class="h1-main-heart">
                         <h1 class="font-h2-francaise">À la française</h1>
